# PalMerge

./: .gitignore  AGENTS.md  Cargo.toml  GOAL.md  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: analysis.rs  container.rs  domain.rs  graph.rs  gvas.rs  lib.rs  properties.rs  raw.rs  schema.rs  validation.rs  values.rs
docs/: FORMAT.md  RELEASING.md  ROADMAP.md
