[workspace]
members = [
    "crates/core",
    "crates/parser",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/g4d3Y3/PalMerge"
rust-version = "1.77"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

