[package]
name = "palmerge-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
palmerge-core = { path = "../core" }

[lints]
workspace = true
